--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
       background-color: #f4f4f9;
+      margin: 20px;
     }
     form {
       max-width: 500px;
@@ -44,6 +44,7 @@
       margin-top: 20px;
       font-weight: bold;
       color: #333;
+      text-align: center;
     }
   </style>
 </head>
@@ -80,7 +81,8 @@
       const formData = new FormData(this);
 
       try {
-        const response = await fetch('http://localhost:3000/send-report', {
+        // Utilisez l'URL fournie par Vercel pour votre backend
+        const response = await fetch('https://accident-de-travail-20m1lldr9-zine76s-projects.vercel.app/send-report', {
           method: 'POST',
           body: formData
         });
